--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,63 @@
-<html>
-	<head>
-		<title>Platformer</title>
-		<style>
-			*{
-				margin: 0;
-			}
-		</style>
-	</head>
-	<body>
-		<script src="main.ts"  type="module"></script>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, orientation=portrait">
+    <title>Platformer</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+        #game {
+            display: block;
+        }
+        #landscape-message {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 24px;
+            color: white;
+            background: black;
+            padding: 10px;
+            z-index: 9999;
+        }
+        @media screen and (orientation: landscape) {
+            #game {
+                display: none;
+            }
+            #landscape-message {
+                display: block;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div id="game"></div>
+    <div id="landscape-message">Please rotate your device to portrait mode.</div>
+    <script src="main.ts" type="module"></script>
+    <script>
+        function checkOrientation() {
+            if (window.innerHeight > window.innerWidth) {
+                document.getElementById('game').style.display = 'block';
+                document.getElementById('landscape-message').style.display = 'none';
+            } else {
+                document.getElementById('game').style.display = 'none';
+                document.getElementById('landscape-message').style.display = 'block';
+            }
+        }
+
+        window.addEventListener('resize', checkOrientation);
+        window.addEventListener('orientationchange', checkOrientation);
+
+        document.addEventListener('DOMContentLoaded', () => {
+            checkOrientation();
+        });
+    </script>
+</body>
 </html>
