--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 <body>
 	<div id="app"></div>
+	<div id="root"></div>
 	<script type="module" src="src/game/main.ts"></script>
+	<script type="module" src="/src/main.tsx"></script>
+	src
 </body>
 
 </html>
