--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 
 <body>
 	<div id="app"></div>
-	<div id="root"></div>
+	<div id="root" class="absolute flex flex-1 bg-transparent w-[100vw] h-[100vh]"></div>
 	<script type="module" src="src/game/main.ts"></script>
 	<script type="module" src="/src/main.tsx"></script>
-	src
 </body>
 
 </html>
