segrate ui files from game

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div id="app"></div>
 	<div id="root" class="absolute flex flex-1 bg-transparent w-[100vw] h-[100vh]"></div>
 	<script type="module" src="src/game/main.ts"></script>
-	<script type="module" src="/src/main.tsx"></script>
+	<script type="module" src="/src/ui/main.tsx"></script>
 </body>
 
 </html>
